--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: Logos Learning
 description: Excellent Tutoring. Christian Values. 
+logo: /assets/img/logo.png
+show_downloads: true
+google_analytics:
