Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 name: Logos Learning
 title: Logos Learning
 description: Excellent Tutoring. Christian Values. 
